themes/ashleykolodziej/src/_non-critical.scss
/* fallback */
@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: local('Material Icons'), local('MaterialIcons-Regular'), url(https://fonts.gstatic.com/s/materialicons/v22/2fcrYFNaTjcS6g4U3t-Y5UEw0lE80llgEseQY3FEmqw.woff2) format('woff2');
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  -moz-font-feature-settings: 'liga';
  -moz-osx-font-smoothing: grayscale;
}

%container-styles {
	@include breakpoint(sm) {
		max-width: $container-SM;
	}
	@include breakpoint(md) {
		max-width: $container-MD;
	}
}

/* latin */
@font-face {
  font-family: 'Merriweather';
  font-style: normal;
  font-weight: 400;
  src: local('Merriweather'), local('Merriweather-Regular'), url(https://fonts.gstatic.com/s/merriweather/v15/RFda8w1V0eDZheqfcyQ4EBampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
}
/* latin */
@font-face {
  font-family: 'Merriweather';
  font-style: normal;
  font-weight: 900;
  src: local('Merriweather Black'), local('Merriweather-Black'), url(https://fonts.gstatic.com/s/merriweather/v15/ZvcMqxEwPfh2qDWBPxn6noQ7a4ChFTJXKOvSywU5K9Q.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
}
/* latin */
@font-face {
  font-family: 'Merriweather';
  font-style: italic;
  font-weight: 400;
  src: local('Merriweather Italic'), local('Merriweather-Italic'), url(https://fonts.gstatic.com/s/merriweather/v15/So5lHxHT37p2SS4-t60SlGfrnYWAzH6tTbHZfcsRIsM.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
}
/* latin */
@font-face {
  font-family: 'Merriweather';
  font-style: italic;
  font-weight: 900;
  src: local('Merriweather Black Italic'), local('Merriweather-BlackItalic'), url(https://fonts.gstatic.com/s/merriweather/v15/EYh7Vl4ywhowqULgRdYwILZYYHiK7MQWKA3oxaVNfbE.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
}
@font-face {
  font-family: 'entypo';
  font-style: normal;
  font-weight: normal;
  src: url('http://weloveiconfonts.com/api/fonts/entypo/entypo.eot');
  src: url('http://weloveiconfonts.com/api/fonts/entypo/entypo.eot?#iefix') format('eot'),
  url('http://weloveiconfonts.com/api/fonts/entypo/entypo.woff') format('woff'),
  url('http://weloveiconfonts.com/api/fonts/entypo/entypo.ttf') format('truetype'),
  url('http://weloveiconfonts.com/api/fonts/entypo/entypo.svg#entypo') format('svg');
}
.entypo-heart:before{content:"\2665"}
.entypo-heart-empty:before{content:"\2661"}
.entypo-star:before{content:"\2605"}
.entypo-star-empty:before{content:"\2606"}
.entypo-menu:before{content:"\2630"}
.entypo-code:before{content:"\e714"}
.entypo-rss:before{content:"\e73a"}
.entypo-share:before{content:"\e73c"}
.entypo-shareable:before{content:"\e73e"}
.entypo-database:before{content:"\e754"}
.entypo-bucket:before{content:"\e756"}
.entypo-flow-cascade:before{content:"\e790"}
.entypo-flow-branch:before{content:"\e791"}
.entypo-flow-tree:before{content:"\e792"}
.entypo-flow-line:before{content:"\e793"}
.entypo-flow-parallel:before{content:"\e794"}
.entypo-github:before{content:"\f300"}
.entypo-flickr:before{content:"\f303"}
.entypo-vimeo:before{content:"\f306"}
.entypo-twitter:before{content:"\f309"}
.entypo-facebook:before{content:"\f30c"}
.entypo-linkedin:before{content:"\f318"}
.entypo-dribbble:before{content:"\f31b"}

.separator {
	margin-right: 10px;

	&:before,
	&:after {
		display: inline-block;
		content: "";
		width: 1px;
		height: 75px;
		background: $bun-red;
		@include transform(skew(-12deg));
		position: absolute;
		top: 0;
		margin-left: 6px;
		opacity: .25;
	}
	&:before {
		margin-left: -10px;
		@include breakpoint(xs) {
			display: none;
		}
	}
}

.banner {
	position: relative;
	margin-bottom: 3vw;
	background-size: cover;
	text-align: center;

	h1 {
		@extend %container-styles;
		max-width: 960px;
		font-size: 7vw;
		line-height: 1;
		color: #fff;
		color: #000;
		text-align: center;

		@include breakpoint(lg) {
			font-size: 90px;
		}
	}
	h2,
	h3 {
		color: #fff;
		color: #000;
		letter-spacing: .03em;
	}
	h3 {
		margin-top: 1.5em;
	}
	.meta {
		//position: absolute;
		display: inline-block;
		margin: 0 auto 3em;
		top: 0;
		left: 0;
	}
	.button {
		color: #fff;
	}

	&.home {
		background-image: url(../../../images/header-main.jpg);
		background-size: cover;
		background-position: top right;
	}
	em {
		color: $niff-yellow;
		font-style: normal;
	}
}

.tags {
	h3 {
		display: inline-block;
	}

	li {
		@extend .button;
		@extend .button.tag;
		display: inline-block;
	}
}

.callout {
	position: relative;
	padding: 2.5vw;
	margin-bottom: 5px;
	background-size: cover;

	a {
		color: inherit;
	}
	p {
		margin-bottom: 1em;
	}
	.meta {
		position: absolute;
		top: 0;
		left: 0;
	}
}

.meta {
	font-family: "FFMarkWebProHeavyItalic";
	font-size: 12px;
	padding: .5em;
	background: $niff-yellow;
}

.button {
	font-family: "FFMarkWebProHeavyItalic";
	border: 5px solid currentColor;
	display: inline-block;
	padding: 0 .5em;

	&.tag {
		background: $niff-yellow;
		border: none;
		margin-bottom: 5px;
		color: black;
	}
}

.footer {
	clear: both;
	text-align: center;
	padding: 3vw;
	border-top: 5px solid currentColor;

	h3 {
		display: inline-block;
	}
}

.featured,
.about {
	padding: 3vw;
	overflow: hidden;
}
.half {
	h2 {
		font-size: 8vw;
		line-height: 1;
		margin-right: 20px;

		@include breakpoint(lg) {
			font-size: 115px;
		}
	}

	@include breakpoint(sm) {
		width: 50%;
		float: left;
	}
}
/* ... */

